# PiXLLaVA

./: .gitignore  README.md  download_data.py  preprocess_data.py  preprocess_detr_data.py  pyproject.toml  requirements.txt  run.sh
mipha/: mm_utils.py
mipha/eval/: model_vqa_science.py
mipha/model/: mipha_arch.py
mipha/model/language_model/: mipha_gemma.py  mipha_phi.py  mipha_phi1_5.py  mipha_phi3.py
mipha/train/: mipha_trainer.py  train.py
models/: detr_resnet.py  merge_weights.py  prompt.py  ram_plus.py  roi_selection.py  tag_filtering.py  yolo_world.py
pixl/: __init__.py  conversation.py  mm_utils.py  utils.py
pixl/eval/: eval_spatial_bench.py  eval_textvqa.py  eval_vstar.py  mmmu_eval.py  model_qa.py  model_vqa.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_mmmu.py  model_vqa_science.py
pixl/model/: __init__.py  builder.py  pixl_arch.py
pixl/model/language_model/: configuration_pixl.py  pixl_gemma.py  pixl_llama.py  pixl_phi.py  pixl_phi1_5.py  pixl_phi3.py
pixl/model/language_model/llama/: configuration_llama.py  modeling_llama.py
pixl/model/multimodal_encoder/: clip_encoder.py  dinov2_encoder.py  siglip_encoder.py
pixl/serve/: cli.py
pixl/train/: convert_model2base_pixl.py  pixl_trainer.py  train.py
scripts/: convert_vizwiz_for_submission.py  merge_lora_weights.py
scripts/mipha/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixl/: all.sh  finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixl/eval/: gqa.sh  llavabench.sh  mmbench.sh  mmbench_cn.sh  mme.sh  mmvet.sh  mmvp.sh  pope.sh  seed.sh  spatialbench.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh  vstar.sh
scripts/pixllava/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/llamav2/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/llamav31/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/llamav32/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/phiv2/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/phiv3/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/phiv35/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava-dev/vicunav15/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava/llamav2/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava/llamav31/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava/llamav32/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava/phiv2/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava/phiv3/: finetune.sh  get_base_model.sh  pretrain.sh
scripts/pixllava/phiv35/: finetune.sh  pretrain.sh
scripts/pixllava/vicunav15/: finetune.sh  get_base_model.sh  pretrain.sh
(+2 files in other folders)
