[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mipha"
version = "1.0.0"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "einops==0.8.0", "fastapi==0.115.0", "gradio==4.44.1", "markdown2[all]", "numpy",
    "requests", "tokenizers==0.20",
    "torch==2.4.1", "torchvision==0.19.1", "uvicorn==0.31.0", "wandb",
    "shortuuid", "httpx==0.27.2",
    "deepspeed==0.15.1",
    "peft==0.13.0",
    "transformers==4.45.1",
    "accelerate==0.34.2",
    "bitsandbytes==0.44.1",
    "scikit-learn==1.5.2",
    "sentencepiece==0.2.0",
    "einops==0.8.0", "einops-exts==0.0.4", "timm==1.0.9",
    "gradio_client==1.3.0", "fire==0.7.0", 
    "python-dotenv", "wheel==0.44.0",
    "datasets==3.0.1", "flash-attn==2.6.3",
    "hf-transfer==0.1.8", "huggingface_hub==0.25.1"
]

[project.urls]
"Bug Tracker" = "https://github.com/zhuyiche/Mipha/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
