[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixl"
version = "1.0.0"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "wheel",
    "einops==0.8.0", "fastapi==0.115.2", "gradio==3.35.2", "markdown2[all]", "numpy==1.26.4",
    "requests", "sentencepiece==0.2.0", "tokenizers==0.20.1",
    "torch==2.2.0", "torchvision", "uvicorn==0.32.0", "wandb==0.18.1",
    "shortuuid==1.0.13", "httpx==0.27.2",
    "deepspeed==0.15.2",
    "peft==0.13.2",
    "transformers==4.45.2",
    "accelerate==1.0.1",
    "bitsandbytes==0.44.1",
    "scikit-learn==1.5.2",
    "einops-exts==0.0.4", "timm==1.0.11",
    "gradio_client==1.4.2",
    "fire", "python-dotenv", 
    "wheel", "datasets", 
    "hf-transfer", "huggingface_hub",
    "opencv-python",
    "backoff", "openai", "anthropic",
]

[project.urls]
"Bug Tracker" = "https://github.com/hunarbatra/PiXLLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
